<resources>
    <string name="app_name">嗖嗖Talk</string>
    <string name="pwd_length_at_least_6">密码长度应不少于6位</string>
    <string name="voice_call_join_failure">加入语音通话频道失败</string>
    <string name="yesterday">昨天</string>
    <string name="today">今天</string>
    <string name="add_to_friend">已添加对方为好友</string>
    <string name="group_invite_permission_closed">该群邀请权限已被关闭</string>
    <string name="version_not_support">版本不支持</string>
    <string name="has_download_into_album">已保存到相册</string>
    <string name="you_are_moved_out_from_group">你已被移出群组</string>
    <string name="new_pwd_same_as_old">新密码与旧密码一致</string>
    <string name="other_side_deleted_you">对方已将你删除</string>
    <string name="not_allow_invite_prompt">群组邀请功能已关闭</string>
    <string name="conversation_temporary_chat">[临时会话]</string>
    <string name="temporary_chat">[临时会话]%1$s</string>
    <string name="manger_beyond_limit_prompt">管理员最多可设置5位</string>
    <string name="cookie_invalid_prompt">您的账号在另外一台设备上登录，该设备您被迫退出。</string>
    <string name="success_to_join_group">已成功加入群组</string>
    <string name="apply_add_friend">加你为好友</string>
    <string name="apply_add_friend_sent">已向对方发起加好友申请</string>
    <string name="ignore">忽略</string>
    <string name="make_friend">加为好友</string>
    <string name="cancel_shield_conversation">取消屏蔽</string>
    <string name="invite_friend_join_group">邀好友入群</string>
    <string name="check_info">查看资料</string>
    <string name="manager_open_ban_speak">管理员开启了全员禁言</string>
    <string name="prompt_confirm_clear_conversation_record">确定要清空该会话记录吗？</string>
    <string name="prompt_confirm_logout">确定要退出登录吗？</string>
    <string name="invite_success">邀请成功</string>
    <string name="cannot_send_msg_to_black_person">已拉黑人员无法发送消息</string>
    <string name="subgroup_delete_prompt">删除该分组后，组内联系人将会移至默认分组</string>
    <string name="cleared">已清空</string>
    <string name="no_introduction">暂无群介绍</string>
    <string name="search_conversation">搜索会话</string>
    <string name="check_more_record">查看更多记录</string>
    <string name="rename_grouping">分组重命名</string>
    <string name="prompt_input_hint">1~7个字符</string>
    <string name="create_grouping">新建分组</string>
    <string name="please_input_verify_info">请输入验证消息</string>
    <string name="applying">申请中···</string>
    <string name="cancel_make_top">取消置顶</string>
    <string name="content">内容</string>
    <string name="title">标题</string>
    <string name="modify_group_info">编辑群资料</string>
    <string name="only_allow_manager_speak">开启后只允许群主和管理员发言</string>
    <string name="clear_group_conversation">清空群会话</string>
    <string name="shield_group_conversation">屏蔽群会话</string>
    <string name="check_group_member">查看群成员</string>
    <string name="invite_new_member">邀请新成员</string>
    <string name="confirm_delete_this_friend">确认删除该好友</string>
    <string name="pull_black_list">拉入黑名单</string>
    <string name="push_black_list">移出黑名单</string>
    <string name="clear_conversation">清空会话</string>
    <string name="shield_conversation">屏蔽会话</string>
    <string name="make_top_conversation">会话置顶</string>
    <string name="abnormal_login">异常登录</string>
    <string name="notify">通知</string>
    <string name="other_side_send_add_friend_notify">对方向你发送了加好友通知</string>
    <string name="you_send_add_friend_notify">你向对方发送了加好友通知</string>
    <string name="send_join_group_apply">你向本群发送了加群申请</string>
    <string name="invite_you_join_group">邀请你加入本群</string>
    <string name="apply_join_group">申请加入本群</string>
    <string name="save_modify">保存修改</string>
    <string name="please_input_your_old_pwd">请输入您的旧密码</string>
    <string name="please_set_your_new_pwd">请设置您新的登录密码</string>
    <string name="account_login_record">账号登录记录</string>
    <string name="change_password">更改密码</string>
    <string name="msg_vibrate_remind">消息震动提醒</string>
    <string name="msg_audio_remind">消息声音提醒</string>
    <string name="hide">隐身</string>
    <string name="online">在线</string>
    <string name="offline">离线</string>
    <string name="state">状态</string>
    <string name="group_nickname">群组昵称</string>
    <string name="send_apply">发送申请</string>
    <string name="group_id">群ID</string>
    <string name="add_group">添加群组</string>
    <string name="group">群</string>
    <string name="add_conversation">新建会话</string>
    <string name="add_group_conversation">新建群组会话</string>
    <string name="more">更多</string>
    <string name="delete">删除</string>
    <string name="make_top">置顶</string>
    <string name="select_all">全部选择</string>
    <string name="cancel_all">全部取消</string>
    <string name="conversation_search_hint">搜索会话</string>
    <string name="conversation">会话</string>
    <string name="voice_call_need_mic_permission">语音通话需要麦克风权限</string>
    <string name="phone_num_format_error">手机号格式错误</string>
    <string name="voice_record_too_short">录音时间太短</string>
    <string name="slide_left_delete_voice_record">向左滑动删除语音</string>
    <string name="added">已添加</string>
    <string name="invited">已邀请</string>
    <string name="phone_contact">通讯录</string>
    <string name="add_phone_contact_friend">添加通讯录好友</string>
    <string name="audio">语音</string>
    <string name="call_finish">通话结束</string>
    <string name="connecting">正在连接...</string>
    <string name="other_side_refused">对方已拒绝</string>
    <string name="other_side_canceled">对方已取消</string>
    <string name="canceled">已取消</string>
    <string name="you_not_accept">您未接听</string>
    <string name="other_side_busy">用户正忙</string>
    <string name="side_busy">当前正在语音通话，请稍后再试</string>
    <string name="other_side_no_response">对方无应答</string>
    <string name="invite_voice_call">对方邀请语音通话...</string>
    <string name="waiting_for_accept">正在等待对方接收邀请...</string>
    <string name="hand_free">免提</string>
    <string name="silence">静音</string>
    <string name="voice_calls">语音通话</string>
    <string name="back">返回</string>
    <string name="send_file">发送文件</string>
    <string name="password_find_back">密码找回</string>
    <string name="please_confirm_password_same">确认您输入的密码一致</string>
    <string name="please_input_num_letter_password">请输入6~20位数字和大小写字母组合</string>
    <string name="please_set_your_password">请设置您的登录密码</string>
    <string name="introduce_yourself_simply">简单介绍一下自己吧</string>
    <string name="introduce_group_simply">简单介绍一下群组吧</string>
    <string name="resend_verify_code">重新发送验证码</string>
    <string name="please_try_as_below">如果您未收到验证码短信，请您尝试以下操作。</string>
    <string name="please_input_verify_code">请输入你通过短信收到的验证码。</string>
    <string name="verify_phone_num">验证号码</string>
    <string name="please_confirm_your_country_phone_num">请确认您的国家代码和手机号码</string>
    <string name="your_country">您的国家</string>
    <string name="country_search_hint">搜索国家</string>
    <string name="not_open_gps_location_prompt">未打开GPS定位</string>
    <string name="login_confirm">确认登录</string>
    <string name="pwd_login_hint">密码（6-20位）</string>
    <string name="prompt_delete_friend_confirm">确定要删除该好友吗？</string>
    <string name="prompt_disband_group_confirm">确定要解散该群吗？</string>
    <string name="prompt_quit_group_confirm">确定要退出该群吗？</string>
    <string name="please_input_search_phone_num">请输入你要查找的手机号码</string>
    <string name="please_input_group_id">请输入你要查找的群ID</string>
    <string name="search_group_null">您搜索的群ID不存在</string>
    <string name="search_friend_null">您搜索的用户不存在</string>
    <string name="title_min_length_limit">标题长度最少4个字</string>
    <string name="content_min_length_limit">正文长度最少15个字</string>
    <string name="announcement_create">创建群公告</string>
    <string name="announcement_edit">编辑群公告</string>
    <string name="release">发布</string>
    <string name="announcement_title_hint">标题（必填），4-40字</string>
    <string name="announcement_content_hint">正文（必填），15-500字</string>
    <string name="max_select_size">最多选9项</string>
    <string name="please_input_announcement">请输入群公告</string>
    <string name="image">图片</string>
    <string name="music">音乐</string>
    <string name="file">文件</string>
    <string name="main_message">消息</string>
    <string name="main_contact">联系人</string>
    <string name="main_notification">好友通知</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="region">地区</string>
    <string name="china">中国</string>
    <string name="taiwan">中国台湾</string>
    <string name="hongkong">中国香港</string>
    <string name="macao">中国澳门</string>
    <string name="philippines">菲律宾</string>
    <string name="malaysia">马来西亚</string>
    <string name="indonesia">印度尼西亚</string>
    <string name="vietnam">越南</string>
    <string name="cambodia">柬埔寨</string>
    <string name="phone_num">手机号码</string>
    <string name="next_step">下一步</string>
    <string name="pwd_find_back">找回密码</string>
    <string name="nickname">昵称</string>
    <string name="login_by_phone_num">手机号登录</string>
    <string name="pwd_input_please">请输入密码</string>
    <string name="confirm">确认</string>
    <string name="set_successfully">设置成功</string>
    <string name="filter_title_viewgizmos">主登录页</string>
    <string name="send">发送</string>
    <string name="cancel">取消</string>
    <string name="document">文档</string>
    <string name="video">视频</string>
    <string name="musicInfo">音乐</string>
    <string name="host_phone">本机</string>
    <string name="sent">已发送</string>
    <string name="phone_num_cannot_null">手机号不能为空</string>
    <string name="nickname_cannot_null">昵称不能为空</string>
    <string name="phone_num_input_please">请输入手机号</string>
    <string name="message_cannot_null">发送内容不可为空</string>
    <string name="search">搜索</string>
    <string name="friend">好友</string>
    <string name="add">添加</string>
    <string name="create_group">新建群组</string>
    <string name="input_group_name">请输入群名称</string>
    <string name="group_introduce">群简介</string>
    <string name="group_scale">群规模</string>
    <string name="add_group_verify">群验证</string>
    <string name="need_verify">需要验证</string>
    <string name="need_not_verify">无需验证</string>
    <string name="add_friend">添加好友</string>
    <string name="input_verify_info">填写验证信息</string>
    <string name="member_setting">成员设置</string>
    <string name="remark">备 注</string>
    <string name="subgroup">分 组</string>
    <string name="group_admin">群管理员</string>
    <string name="apply_add_group">申请加群</string>
    <string name="expand">展开</string>
    <string name="group_info">群资料</string>
    <string name="friend_info">好友资料</string>
    <string name="account">账 号</string>
    <string name="sex">性 别</string>
    <string name="add_another_friend">加好友</string>
    <string name="verify_msg">验证消息</string>
    <string name="finish">完成</string>
    <string name="agree">同意</string>
    <string name="agreed">已同意</string>
    <string name="refused">已拒绝</string>
    <string name="wait_for_verify">等待验证</string>
    <string name="refuse">拒绝</string>
    <string name="bk4">bk4</string>
    <string name="status_manage">状态管理</string>
    <string name="setting">设置</string>
    <string name="online_state">在线状态</string>
    <string name="account_device_security">账号、设备安全</string>
    <string name="message_notify">消息通知</string>
    <string name="add_me_setting">加我为好友设置</string>
    <string name="personal_theme">个性主题</string>
    <string name="about_hichat">关于嗖嗖Talk</string>
    <string name="has_risk">存在风险</string>
    <string name="modify_password">修改密码</string>
    <string name="new_message_remind">新消息提醒</string>
    <string name="voice">声音</string>
    <string name="stealth_state">隐身状态</string>
    <string name="edit_info">修改个人资料</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="keep_secret">保密</string>
    <string name="select_from_album">选择照片</string>
    <string name="take_photo">拍照</string>
    <string name="not_set">未设置</string>
    <string name="group_talk_banned">禁言</string>
    <string name="member_permission">成员权限</string>
    <string name="join_way">加群方式</string>
    <string name="allow_search">允许被搜索</string>
    <string name="need_identify_verify">需要身份验证</string>
</resources>