<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/white">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_set_your_new_pwd"
        android:textSize="@dimen/font_size_15"
        android:textColor="@color/black_00"
        android:layout_marginTop="35dp"
        />

    <EditText
        android:id="@+id/et_more_modify_pwd_old"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:background="@null"
        android:hint="@string/please_input_your_old_pwd"
        android:textSize="@dimen/font_size_17"
        android:textColorHint="@color/gray_be"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="15dp"
        android:inputType="textPassword"
        android:maxLength="20"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_height"
        android:background="@color/gray_c7"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        />

    <EditText
        android:id="@+id/et_more_modify_pwd_new_first"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:background="@null"
        android:hint="@string/please_input_num_letter_password"
        android:textSize="@dimen/font_size_17"
        android:textColorHint="@color/gray_be"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:inputType="textPassword"
        android:maxLength="20"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_height"
        android:background="@color/gray_c7"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        />

    <EditText
        android:id="@+id/et_more_modify_pwd_new_second"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:background="@null"
        android:hint="@string/please_confirm_password_same"
        android:textSize="@dimen/font_size_17"
        android:textColorHint="@color/gray_be"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:inputType="textPassword"
        android:maxLength="20"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_height"
        android:background="@color/gray_c7"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        />

    <Button
        android:id="@+id/btn_setting_modify_pwd_confirm"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        style="@style/btn_corner_blue_blue"
        android:text="@string/save_modify"
        android:layout_marginTop="44dp"
        android:enabled="false"
        />

</LinearLayout>