<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_f2">

    <FrameLayout
        android:id="@+id/fl_contact_group_edit_info"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/white"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_info"
            android:textSize="@dimen/font_size_14"
            android:textColor="@color/black_33"
            android:layout_marginLeft="15dp"
            android:layout_gravity="center_vertical"
            />

        <ImageView
            android:layout_width="8dp"
            android:layout_height="15dp"
            android:src="@drawable/icon_arrow_right"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="15dp"
            />

    </FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/member_setting"
        android:textSize="@dimen/font_size_14"
        android:textColor="@color/gray_99"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="10dp"
        />

    <FrameLayout
        android:id="@+id/fl_contact_group_manager_set"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/group_admin"
            android:textSize="@dimen/font_size_14"
            android:textColor="@color/black_33"
            android:layout_marginLeft="15dp"
            android:layout_gravity="center_vertical"
            />

        <ImageView
            android:layout_width="8dp"
            android:layout_height="15dp"
            android:src="@drawable/icon_arrow_right"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="15dp"
            />

        <TextView
            android:id="@+id/tv_contact_group_manage_manager_set"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_set"
            android:textSize="@dimen/font_size_12"
            android:textColor="@color/gray_99"
            android:layout_gravity="center_vertical|right"
            android:layout_marginRight="33dp"
            />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rcv_contact_group_manage_manager_list"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginLeft="80dp"
            android:layout_gravity="center_vertical">

        </android.support.v7.widget.RecyclerView>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/fl_contact_group_talk_ban"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/white"
        android:layout_marginTop="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/group_talk_banned"
            android:textSize="@dimen/font_size_14"
            android:textColor="@color/black_33"
            android:layout_marginLeft="15dp"
            android:layout_gravity="center_vertical"
            />

        <ImageView
            android:layout_width="8dp"
            android:layout_height="15dp"
            android:src="@drawable/icon_arrow_right"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="15dp"
            />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/fl_contact_group_member_permission"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/white"
        android:layout_marginTop="@dimen/divider_height">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/member_permission"
            android:textSize="@dimen/font_size_14"
            android:textColor="@color/black_33"
            android:layout_marginLeft="15dp"
            android:layout_gravity="center_vertical"
            />

        <ImageView
            android:layout_width="8dp"
            android:layout_height="15dp"
            android:src="@drawable/icon_arrow_right"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="15dp"
            />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/fl_contact_group_join_way"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/white"
        android:layout_marginTop="@dimen/divider_height">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/join_way"
            android:textSize="@dimen/font_size_14"
            android:textColor="@color/black_33"
            android:layout_marginLeft="15dp"
            android:layout_gravity="center_vertical"
            />

        <ImageView
            android:layout_width="8dp"
            android:layout_height="15dp"
            android:src="@drawable/icon_arrow_right"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="15dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/need_identify_verify"
            android:textSize="@dimen/font_size_12"
            android:textColor="@color/gray_99"
            android:layout_gravity="center_vertical|right"
            android:layout_marginRight="33dp"
            />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/white"
        android:layout_marginTop="@dimen/divider_height">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/allow_search"
            android:textSize="@dimen/font_size_14"
            android:textColor="@color/black_33"
            android:layout_marginLeft="15dp"
            android:layout_gravity="center_vertical"
            />

        <CheckBox
            android:id="@+id/cb_contact_group_allow_search"
            android:layout_width="45dp"
            android:layout_height="22dp"
            android:button="@null"
            android:background="@null"
            android:drawableTop="@drawable/check_corner_img_slide"
            android:layout_gravity="center_vertical|right"
            android:layout_marginRight="15dp"
            />

    </FrameLayout>


</LinearLayout>