<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_set_your_password"
        android:layout_marginTop="35dp"
        android:textSize="@dimen/font_size_15"
        android:textColor="@color/black_00"
        />

    <EditText
        android:id="@+id/et_login_register_password_first"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:hint="@string/please_input_num_letter_password"
        android:textSize="@dimen/font_size_17"
        android:textColorHint="@color/gray_be"
        android:textColor="@color/black_00"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="20dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:maxLength="20"
        android:inputType="textPassword"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_height"
        android:background="@color/gray_divide_main"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        />

    <EditText
        android:id="@+id/et_login_register_password_second"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:hint="@string/please_confirm_password_same"
        android:textSize="@dimen/font_size_17"
        android:textColorHint="@color/gray_be"
        android:textColor="@color/black_00"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="6dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:maxLength="20"
        android:inputType="textPassword"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_height"
        android:background="@color/gray_divide_main"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        />

    <Button
        android:id="@+id/btn_login_register_password_next_step"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_marginTop="125dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:text="@string/next_step"
        style="@style/btn_corner_blue_blue"
        android:enabled="false"
        />

</LinearLayout>