<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/none_color">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="22dp"
        android:layout_marginRight="22dp">

        <TextView
            android:id="@+id/tv_dialog_setting_from_album"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:text="@string/select_from_album"
            android:gravity="center"
            android:textSize="@dimen/font_size_14"
            android:textColor="@color/blue_main"
            android:background="@drawable/press_corner_white_gray_top_left_right_4"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_height"
            android:background="@color/gray_f1"
            />

        <TextView
            android:id="@+id/tv_dialog_setting_camera"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:text="@string/take_photo"
            android:gravity="center"
            android:textSize="@dimen/font_size_14"
            android:textColor="@color/blue_main"
            android:background="@drawable/press_corner_white_gray_bot_left_right_4"
            />

        <TextView
            android:id="@+id/tv_dialog_setting_cancel"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:text="@string/cancel"
            android:gravity="center"
            android:textSize="@dimen/font_size_14"
            android:textColor="@color/black_00"
            android:layout_marginTop="10dp"
            android:background="@drawable/press_corner_white_gray_4"
            />

    </LinearLayout>

</RelativeLayout>