<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_f2"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_verify_info"
        android:textSize="@dimen/font_size_14"
        android:textColor="@color/gray_99"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="15dp"
        />

    <EditText
        android:id="@+id/et_contact_add_friend_verify_input"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@color/gray_fa"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textSize="@dimen/font_size_14"
        android:textColor="@color/black_33"
        android:textColorHint="@color/gray_99"
        android:hint="@string/input_verify_info"
        android:gravity="start"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/member_setting"
        android:textSize="@dimen/font_size_14"
        android:textColor="@color/gray_99"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="10dp"
        />

    <RelativeLayout
        android:id="@+id/rl_contact_add_friend_verify_note"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/gray_fa"
        android:visibility="gone"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remark"
            android:layout_marginLeft="15dp"
            android:layout_centerVertical="true"
            android:textSize="@dimen/font_size_14"
            android:textColor="@color/black_33"
            />

        <TextView
            android:id="@+id/tv_contact_add_friend_verify_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="name"
            android:layout_marginLeft="78dp"
            android:layout_centerVertical="true"
            android:textSize="@dimen/font_size_14"
            android:textColor="@color/black_33"
            />

        <ImageView
            android:layout_width="8dp"
            android:layout_height="15dp"
            android:src="@drawable/icon_arrow_right"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            />

    </RelativeLayout>

    <include layout="@layout/layout_divider_2"/>

    <RelativeLayout
        android:id="@+id/rl_contact_add_friend_verify_grouping"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/gray_fa"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subgroup"
            android:layout_marginLeft="15dp"
            android:layout_centerVertical="true"
            android:textSize="@dimen/font_size_14"
            android:textColor="@color/black_33"
            />

        <TextView
            android:id="@+id/tv_contact_add_friend_verify_grouping"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/friend"
            android:layout_marginLeft="78dp"
            android:layout_centerVertical="true"
            android:textSize="@dimen/font_size_14"
            android:textColor="@color/black_33"
            />

        <ImageView
            android:layout_width="8dp"
            android:layout_height="15dp"
            android:src="@drawable/icon_arrow_right"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            />

    </RelativeLayout>

</LinearLayout>